# sample-docker-conda-cpp-project

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
dockerfiles/: Dockerfile
src/: main.cpp
